Add GitHub Actions to automate krew plugin publication
Signed-off-by: Ivan Sim <ihcsim@gmail.com>

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -71,3 +71,8 @@ jobs:
           target/releases/${{ needs.build.outputs.version }}/plugins/kubectl-promdump-windows-amd64-${{ needs.build.outputs.version }}.tar.gz.sha256
           target/releases/${{ needs.build.outputs.version }}/promdump
           target/releases/${{ needs.build.outputs.version }}/promdump.sha256
+    - name: krew-index
+      if: ${{ success() }}
+      uses: rajatjindal/krew-release-bot@v0.0.43
+      with:
+        krew_template_file: plugins/promdump.yaml
