--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -2,11 +2,12 @@ on:
   push:
     branches:
     - main
+    - dockerfile
     tags:
     - v*
 jobs:
   lint:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     steps:
     - name: checkout code
       uses: actions/checkout@v2
@@ -15,7 +16,7 @@ jobs:
         curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b ./ v1.31.0
         make lint PATH=$PATH:`pwd`
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     outputs:
       version: ${{ steps.build.outputs.version }}
     steps:
@@ -34,16 +35,21 @@ jobs:
         version=$(echo "${{ github.ref }}" | awk -F'/' '{print $3}')
         make build VERSION="${version}"
         echo "::set-output name=version::${version}"
-  release:
-    if: ${{ startsWith(github.ref, 'refs/tags') }}
+  image:
+    if: ${{ startsWith(github.ref, 'refs/tags') || github.ref == 'refs/heads/dockerfile' }}
     needs:
     - lint
     - build
-    runs-on: ubuntu-18.04
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+    runs-on: ubuntu-22.04
+    steps:
+    - name: checkout code
+      uses: actions/checkout@v2
+    - run: make image VERSION=${{ needs.build.outputs.version }}
+  release:
+    if: ${{ startsWith(github.ref, 'refs/tags') }}
+    needs:
+    - image
+    runs-on: ubuntu-22.04
     steps:
     - name: install Go
       uses: actions/setup-go@v3
