Fixed release step in CI pipeline
Signed-off-by: Ivan Sim <ihcsim@gmail.com>

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -55,6 +55,7 @@ jobs:
   release:
     if: ${{ startsWith(github.ref, 'refs/tags') }}
     needs:
+    - build
     - image
     runs-on: ubuntu-22.04
     steps:
